# ddmatch-cpp

./: .gitignore  CMakeLists.txt  TODO.txt
runtime/: build.bat  build.sh  clean.sh  wipe.bat  wipe.sh
src/cpp/: CMakeLists.txt
src/cpp/UnitTests/: CMakeLists.txt
src/cpp/UnitTests/core/: CMakeLists.txt  test_TCube.cpp  test_TGrid.cpp  test_fft.cpp
src/cpp/UnitTests/ddmatch/: CMakeLists.txt  main.cpp
src/cpp/apps/: CMakeLists.txt
src/cpp/apps/example/: CMakeLists.txt  DiffeoFunctionMatching.cpp  DiffeoFunctionMatching.h  Diffeo_functions.cpp  Diffeo_functions.h  impl.cpp  main.cpp
src/cpp/apps/fft/: CMakeLists.txt  main.cpp
src/cpp/apps/resize/: CMakeLists.txt  impl.cpp  main.cpp
src/cpp/core/: MyArrays.h  MyFft.h  MyFftSolver.h  MyVec.h
src/cpp/ddmatch/: CMakeLists.txt  DiffeoFunctionMatching.cpp  DiffeoFunctionMatching.h  Diffeo_functions.cpp  Diffeo_functions.h
src/cpp/image/: Image.h  Image_funcs.h  Image_storage.h
